{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 9,
  "lineage": "2c19b880-ff03-aed1-5873-420f5f031133",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bdi_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c7217cdde317cfec",
            "arn": "arn:aws:ec2:us-east-1:466724106535:instance/i-05bd33b0a6d3f5451",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05bd33b0a6d3f5451",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "bdi-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f3cb6a2674ceb52d",
            "private_dns": "ip-10-0-1-225.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.225",
            "public_dns": "ec2-44-211-184-255.compute-1.amazonaws.com",
            "public_ip": "44.211.184.255",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0759aad86dfbde9f2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f62d5d7a12940aae",
            "tags": {
              "Name": "bdi-instance"
            },
            "tags_all": {
              "Name": "bdi-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ad833c25fd593b98"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "dependencies": [
            "aws_key_pair.bdi_key_pair",
            "aws_security_group.bdi_sg",
            "aws_subnet.bdi_subnet",
            "aws_vpc.bdi_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "bdi_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:466724106535:internet-gateway/igw-0038d9ee5a5cb0554",
            "id": "igw-0038d9ee5a5cb0554",
            "owner_id": "466724106535",
            "tags": {
              "Name": "bdi-igw"
            },
            "tags_all": {
              "Name": "bdi-igw"
            },
            "vpc_id": "vpc-0862aadf7a4781aee"
          },
          "dependencies": [
            "aws_vpc.bdi_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "bdi_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:466724106535:route-table/rtb-0a86846e4319d0065",
            "id": "rtb-0a86846e4319d0065",
            "owner_id": "466724106535",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0038d9ee5a5cb0554",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "bdi-rt"
            },
            "tags_all": {
              "Name": "bdi-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0862aadf7a4781aee"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.bdi_igw",
            "aws_vpc.bdi_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "bdi_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09b4858f47bbdec73",
            "route_table_id": "rtb-0a86846e4319d0065",
            "subnet_id": "subnet-0f62d5d7a12940aae"
          },
          "dependencies": [
            "aws_internet_gateway.bdi_igw",
            "aws_route_table.bdi_rt",
            "aws_subnet.bdi_subnet",
            "aws_vpc.bdi_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bdi_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:466724106535:security-group/sg-0ad833c25fd593b98",
            "description": "Allow inbound traffic for FastAPI app",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ad833c25fd593b98",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "FastAPI",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bdi-sg",
            "name_prefix": "",
            "owner_id": "466724106535",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bdi-sg"
            },
            "tags_all": {
              "Name": "bdi-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0862aadf7a4781aee"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.bdi_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "bdi_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:466724106535:subnet/subnet-0f62d5d7a12940aae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f62d5d7a12940aae",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "466724106535",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "bdi-subnet"
            },
            "tags_all": {
              "Name": "bdi-subnet"
            },
            "vpc_id": "vpc-0862aadf7a4781aee"
          },
          "dependencies": [
            "aws_vpc.bdi_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "bdi_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:466724106535:vpc/vpc-0862aadf7a4781aee",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-041b41d5b87708635",
            "default_route_table_id": "rtb-00831bf9606bb8b6c",
            "default_security_group_id": "sg-03cb08d5b028ee154",
            "dhcp_options_id": "dopt-0502e72576680bfb7",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0862aadf7a4781aee",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00831bf9606bb8b6c",
            "owner_id": "466724106535",
            "tags": {
              "Name": "bdi-vpc"
            },
            "tags_all": {
              "Name": "bdi-vpc"
            }
          }
        }
      ]
    }
  ]
}